actualizacion de animacion

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
         </div>
     
     </main>
+    <div class="social-media">
+        <ul>
+            <li><a href=""> </a></li>
+            <li><a href=""> </a></li>
+            <li><a href=""> </a></li>
+        </ul>
+
+    </div>
 
     <footer class="contenedor">
         <iframe width="540" height="255" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
