--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -12,14 +12,16 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@500&family=Karla:ital,wght@1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../fonts/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos.css">
     <title>Tobati</title>
 </head>
 <body>
     <header>
-        <nav class="contenedor menu"> <!--menu de navegacion-->
+        <nav class="container menu"> <!--menu de navegacion-->
             <div class="">
-                <a href="../index.html" class="logo">Tobati, turismo y cultura</a>  
+                <img src="../imagenes/Tobati.png" alt="" class="tobati" width="" height="">
+                <a href="../index.html" class="logo"><span class="espan1">Tobati, </span><span class="espan2">Turismo</span><span class="espan3"> y Cultura</span>
             </div>
             <div class="clima">
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
@@ -33,7 +35,7 @@
             </div>    
         </nav>
     </header>
-    <main class="contenedor secciones" >
+    <main class="container secciones" >
         <section class="seccion">Expo Villa Artesanal</section>
         <section class="seccion">Fiestas Patronales</section>
         <section class="seccion">Festivales</section>
@@ -49,5 +51,9 @@
     <a href="#" class="subir">
         <i class="fa-solid fa-angles-up"></i>
     </a>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+
 </body>
 </html>
