Bootstrap en cuerpo de Index, Servicios, Noticias y footers

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -36,12 +36,58 @@
         </nav>
     </header>
     <main class="container secciones" >
-        <section class="seccion">Expo Villa Artesanal</section>
-        <section class="seccion">Fiestas Patronales</section>
-        <section class="seccion">Festivales</section>
-        <section class="seccion">Actividades Escolares</section>
-        <section class="seccion">Municipio</section>
-        <section class="seccion">Tobati noticias</section>
+        <div class="row">
+            <div class="col-md-6 col-lg-4 section">Expo Villa Artesanal
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 section">Fiestas Patronales
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 section">Festivales
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">LLorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 section">Actividades Escolares
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 section">Municipio
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 section">Tobati Noticias
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/TobaLogo.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+
     </main>
     <footer class="container-fluid">
         <div class="row pie">
