--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
         </nav>
     </header>
     <main class="container home">
-        <div class="info">
-            <h1>Veni a conocer Tobati</h1>
-            <p>Artesanias milenarias, aventuras y muchas otras cosas mas te esperan</p>
-            <a href="">Mas info</a>
-        </div>
+        
     </main>
     <div class="social-media">
         <ul>
@@ -87,13 +83,15 @@
         </div>
     </div>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid"> <!-- Pie de Pagina -->
         <div class="row pie">
             <div class="col-md-3 col-lg-4">
                 <iframe width="640" height="255" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="col-md-3 col-lg-4">
-                <p class="text-white text-center">Copyright - All rights reserved 2022</p>
+                <img src="imagenes/TobaLogo.png" class="fotoPie" width="100%" alt="">
+                    <p class="text-dark"><b>Veni a conocer Tobati. Artesanias milenarias y aventuras te esperan</b></p>
+                    <p class="text-white text-center">Copyright - All rights reserved 2022</p>
                 <div class="redes">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-instagram"></i>
