--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     <main class="container home">
         
     </main>
-    <div class="social-media">
+    <!-- <div class="social-media">
         <ul>
             <li><a href=""> </a></li>
             <li><a href=""> </a></li>
             <li><a href=""> </a></li>
         </ul>
-    </div>
-    <div class="container">
+    </div> -->
+    <div class="container conte-carru col-sd-8 col-md-10 col-lg-7">
         <div id="demo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ul class="carousel-indicators">
@@ -52,9 +52,8 @@
                 <li data-target="#demo" data-slide-to="2"></li>
                 <li data-target="#demo" data-slide-to="3"></li>
             </ul>
-        
             <!-- The slideshow -->
-            <div class="carousel-inner carrusel"  >
+            <div class="carousel-inner">
                 <div class="carousel-item active fotoCarrusel" >
                     <img src="imagenes/orla1.png" alt="" width="49.8%" height="400px">
                     <img src="imagenes/orla1.1.jpg" alt="" width="49.8%" height="400px">
