Actualizacion Iconos del NAV

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,12 +27,11 @@
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
             </div>
             <div class="enlaces">
-                <span class="icon-home"></span><a href="../index.html" class="ini">Inicio</a>
-                <span class="icon-clipboard"></span><a href="servicios.html">Servicios</a>
-                <span class="icon-image"></span><a href="galeria.html">Galeria</a>
-                <span class="icon-info"></span><a href="noticias.html">Noticias</a>     
-                <span class="icon-mail"></span><a href="contacto.html">Contacto</a>
-            </div>    
+                <i class="fa-solid fa-bell-concierge"></i><a href="servicios.html">Servicios</a>
+                <i class="fa-solid fa-images"></i><a href="galeria.html">Galeria</a>
+                <i class="fa-solid fa-circle-info"></i></span><a href="noticias.html">Noticias</a>     
+                <i class="fa-solid fa-id-card"></i></span><a href="contacto.html">Contacto</a>
+            </div>      
         </nav>
     </header>
     <fieldset class="container">
@@ -72,6 +71,9 @@
             </div>
         </div>
     </footer>
+    <a href="../index.html" class="ini">
+        <i class="fa-solid fa-house-chimney"></i>
+    </a>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
