--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
             </div>
             <div class="enlaces">
-                <span class="icon-clipboard"></span><a href="pages/servicios.html">Servicios</a>
-                <span class="icon-image"></span><a href="pages/galeria.html">Galeria</a>
-                <span class="icon-info"></span><a href="pages/noticias.html">Noticias</a>  
-                <span class="icon-mail"></span><a href="pages/contacto.html">Contacto</a>
-            </div>  
+                <i class="fa-solid fa-bell-concierge"></i><a href="pages/servicios.html">Servicios</a>
+                <i class="fa-solid fa-images"></i><a href="/pages/galeria.html">Galeria</a>
+                <i class="fa-solid fa-circle-info"></i></span><a href="pages/noticias.html">Noticias</a>     
+                <i class="fa-solid fa-id-card"></i></span><a href="pages/contacto.html">Contacto</a>
+            </div>    
         </nav>
     </header>
     <main class="container home">
@@ -55,20 +55,20 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active fotoCarrusel" >
-                    <img src="imagenes/orla1.png" alt="" width="49.8%" height="400px">
-                    <img src="imagenes/orla1.1.jpg" alt="" width="49.8%" height="400px">
+                    <img src="imagenes/orla1.png" alt="" width="49.8%" height="300px">
+                    <img src="imagenes/orla1.1.jpg" alt="" width="49.8%" height="300px">
                 </div>
                 <div class="carousel-item fotoCarrusel">
-                    <img src="imagenes/orla2.jpg" alt="" width="49.8%" height="400px">
-                    <img src="imagenes/orla2.1.png" alt="" width="49.8%" height="400px">
+                    <img src="imagenes/orla2.jpg" alt="" width="49.8%" height="300px">
+                    <img src="imagenes/orla2.1.png" alt="" width="49.8%" height="300px">
                 </div>
                 <div class="carousel-item fotoCarrusel">
-                    <img src="imagenes/orla3.jpg" alt="" width="49.8%%" height="400px">
-                    <img src="imagenes/orla3.1.jpg" alt="" width="49.8%" height="400px">
+                    <img src="imagenes/orla3.jpg" alt="" width="49.8%%" height="300px">
+                    <img src="imagenes/orla3.1.jpg" alt="" width="49.8%" height="300px">
                 </div>
                 <div class="carousel-item fotoCarrusel">
-                    <img src="imagenes/orla4.jpg" alt="" width="49.8%" height="400px">
-                    <img src="imagenes/orla4.1.jpg" alt="" width="49.8%" height="400px">
+                    <img src="imagenes/orla4.jpg" alt="" width="49.8%" height="300px">
+                    <img src="imagenes/orla4.1.jpg" alt="" width="49.8%" height="300px">
                 </div>
             </div>
         
