--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -26,12 +26,11 @@
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
             </div>
             <div class="enlaces">
-                <span class="icon-home"></span><a href="../index.html" class="ini">Inicio</a>
-                <span class="icon-clipboard"></span><a href="servicios.html">Servicios</a>
-                <span class="icon-image"></span><a href="galeria.html">Galeria</a>
-                <span class="icon-info"></span><a href="noticias.html">Noticias</a>     
-                <span class="icon-mail"></span><a href="contacto.html">Contacto</a>
-            </div>    
+                <i class="fa-solid fa-bell-concierge"></i><a href="servicios.html">Servicios</a>
+                <i class="fa-solid fa-images"></i><a href="galeria.html">Galeria</a>
+                <i class="fa-solid fa-circle-info"></i></span><a href="noticias.html">Noticias</a>     
+                <i class="fa-solid fa-id-card"></i></span><a href="contacto.html">Contacto</a>
+            </div>  
         </nav>
     </header>
     <div class="contenedor galeri">
@@ -92,6 +91,9 @@
         </div>
 
     </footer>
+    <a href="../index.html" class="ini">
+        <i class="fa-solid fa-house-chimney"></i>
+    </a>
     <a href="#" class="subir">
         <i class="fa-solid fa-angles-up"></i>
     </a>
