Agregué redes Laterales

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 <body>
     <header>
-        <nav class="container menu"> <!--menu de navegacion-->
+        <nav class="container menu"> <!--menu de navegacion-->  
             <div> 
                 <img src="imagenes/Tobati.png" alt="" class="tobati" width="" height="">
-                <a href="index.html" class="logo"><span class="espan1">Tobati, </span><span class="espan2">Turismo</span><span class="espan3"> y Cultura</span>
+                <a href="index.html" class="logo"><span class="espan1"><strong> Tobati, </strong></span><span class="espan2"><strong>Turismo</strong></span><span class="espan3"><strong>y Cultura</strong></span>
             </div>
             <div class="clima climaInicio">
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
@@ -36,13 +36,26 @@
     <main class="container home">
         
     </main>
-    <!-- <div class="social-media">
+
+    <div class="social-media"> <!-- REDES SOCIALES PANEL LATERAL IZQUIERDO -->
         <ul>
-            <li><a href=""> </a></li>
-            <li><a href=""> </a></li>
-            <li><a href=""> </a></li>
+            <li>
+                <a href="" class="">
+                <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="" class="">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+            <li>
+                <a href="" class="">
+                    <i class="fa-brands fa-twitter"></i> 
+                </a>
+            </li>
         </ul>
-    </div> -->
+    </div>
     <div class="container conte-carru col-sd-8 col-md-10 col-lg-7">
         <div id="demo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -90,7 +103,7 @@
             <div class="col-md-3 col-lg-4">
                 <img src="imagenes/TobaLogo.png" class="fotoPie" width="100%" alt="">
                     <p class="text-dark"><b>Veni a conocer Tobati. Artesanias milenarias y aventuras te esperan</b></p>
-                    <p class="text-white text-center">Copyright - All rights reserved 2022</p>
+                    <p class="text-white text-center">© Copyright - All rights reserved 2022</p>
                 <div class="redes">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-instagram"></i>
