--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -20,7 +20,7 @@
         <nav class="container menu"> <!--menu de navegacion-->
             <div class="">
                 <img src="../imagenes/Tobati.png" alt="" class="tobati" width="" height="">
-                <a href="../index.html" class="logo"><span class="espan1">Tobati, </span><span class="espan2">Turismo</span><span class="espan3"> y Cultura</span>
+                <a href="index.html" class="logo"><span class="espan1"><strong> Tobati, </strong></span><span class="espan2"><strong>Turismo</strong></span><span class="espan3"><strong>y Cultura</strong></span>
             </div>
             <div class="clima">
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
@@ -104,6 +104,26 @@
             
         </div>
     </main>
+
+    <div class="social-media"> <!-- REDES SOCIALES PANEL LATERAL IZQUIERDO -->
+        <ul>
+            <li>
+                <a href="" class="">
+                <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="" class="">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+            <li>
+                <a href="" class="">
+                    <i class="fa-brands fa-twitter"></i> 
+                </a>
+            </li>
+        </ul>
+    </div>
     <footer class="container-fluid"> <!-- Pie de Pagina -->
         <div class="row pie">
             <div class="col-md-3 col-lg-4">
@@ -113,7 +133,7 @@
             <div class="col-md-3 col-lg-4">
                 <img src="../imagenes/TobaLogo.png" class="fotoPie" width="100%" alt="">
                     <p class="text-dark"><b>Veni a conocer Tobati. Artesanias milenarias y aventuras te esperan</b></p>
-                    <p class="text-white text-center">Copyright - All rights reserved 2022</p>
+                    <p class="text-white text-center">© Copyright - All rights reserved 2022</p>
                 <div class="redes">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-instagram"></i>
