actualizacion de datos SASS

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -21,7 +21,7 @@
         <nav class="container menu"> <!--menu de navegacion-->
             <div class="">
                 <img src="../imagenes/Tobati.png" alt="" class="tobati" width="" height="">
-                <a href="index.html" class="logo"><span class="espan1"><strong> Tobati, </strong></span><span class="espan2"><strong>Turismo</strong></span><span class="espan3"><strong>y Cultura</strong></span>
+                <a href="../index.html" class="logo"><span class="espan1"><strong> Tobati, </strong></span><span class="espan2"><strong>Turismo</strong></span><span class="espan3"><strong>y Cultura</strong></span>
             </div>
             <div class="clima">
                 <a target="_blank" href="https://hotelmix.es/weather/compania-tobati-w3074315"><img src="https://w.bookcdn.com/weather/picture/13_w3074315_1_4_fff5d9_158_fff5d9_333333_08488D_3_fff5d9_333333_1_6.png?scode=124&domid=582&anc_id=5028"  alt="booked.net"/></a> 
@@ -92,6 +92,11 @@
     <div class="social-media"> <!-- REDES SOCIALES PANEL LATERAL IZQUIERDO -->
         <ul>
             <li>
+                <a href="">
+                    <i class="fa-brands fa-whatsapp"></i>
+                </a>
+            </li>
+            <li>
                 <a href="" class="">
                 <i class="fa-brands fa-facebook"></i>
                 </a>
@@ -117,11 +122,6 @@
                 <img src="../imagenes/TobaLogo.png" class="fotoPie" width="100%" alt="">
                 <p class="text-dark"><b>Veni a conocer Tobati. Artesanias milenarias y aventuras te esperan</b></p>
                 <p class="text-white text-center">© Copyright - All rights reserved 2022</p>
-                <div class="redes">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                </div>
             </div>
             <div class="col-md-3 col-lg-4">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28865.17573173796!2d-57.10481965352962!3d-25.26564110698348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945dd2137cb199c1%3A0xabbb57218db2b011!2sTobat%C3%AD%2C%20Paraguay!5e0!3m2!1ses!2sar!4v1650403296184!5m2!1ses!2sar" width="540" height="255" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
